--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -2,6 +2,43 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-p{
+.item-a { grid-column: 1 / 7;}
+.item-b { grid-column: 1 / 3;}
+.item-c { grid-column: 3 / 5;}
+.item-d { grid-column: 5 / 7;}
+
+.grid {
+    display: grid;
+    background-color: #f5f5f5;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: auto;
+    gap: 1em;
+    padding: 1em;
+}
+
+.grid > div {
+    background-color: #fff;
+    border-radius: 0.5em;
+}
+
+object {
+    display: block;
+    margin: auto;
+    max-width: 250px;
+}
+
+.center {
+    text-align: center;
+}
+
+#date-time{
+    padding: 0 1em;
+}
+#date-time > p{
     margin: 4px 0;
+    font-size: 1.5em;
+}
+
+.content {
+    padding: 0.5em;
 }
